<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bkg1"
    tools:context=".activities.LoginActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="304dp"
        android:layout_height="481dp"
        android:background="@drawable/viewpager"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="TextSizeCheck">

        <TextView
            android:id="@+id/loginText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_text"
            android:textAlignment="center"
            android:textColor="@color/dark_violet"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edittext"
            android:drawableStart="@drawable/baseline_email_24"
            android:drawablePadding="8dp"
            android:hint="@string/email"
            android:padding="8dp"
            android:textColor="@color/very_dark_grayish_blue" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edittext"
            android:drawableStart="@drawable/password_lock_24"
            android:drawablePadding="8dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textColor="@color/very_dark_grayish_blue" />

        <CheckBox
            android:id="@+id/rememberMeCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/remember_me"
            android:textColor="@color/dark_violet"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/forgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/forgot_password"
            android:textColor="@color/dark_violet"
            android:textColorHighlight="#B51010"
            android:textColorLink="#650505"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/forget_password_24" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/dark_violet"
            android:text="@string/action_sign_in"
            android:textColor="@color/button_bkg_grey"
            android:textSize="18sp"
            app:cornerRadius="20dp" />

        <TextView
            android:id="@+id/signUpButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:text="@string/sign_up"
            android:textColor="@color/dark_violet"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/guestButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:gravity="center"
            android:text="@string/guest"
            android:textColor="@color/dark_violet"
            android:textSize="18sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>